assets/css/style.css
header {
	background-color: #ffcc00;
	text-align: center;
	padding: 20px;
	clear: both;
}

h1 {
	font-size: 75px;
	font-style: italic;
	text-align: center;
}

#main-container {
	background-color: black;
	margin: 0 auto;
	width: 100%;
}

.game-container {
	background-color: black;
	width: 1000px;
	margin: 0 auto;
}

#banner {
	background-color: black;
}

#indiana {
	display: block;
	clip: rect(0 5px 0 0);
	margin: auto;
	padding: 20px;
}

#number-box {
	float: left;
	margin: 10px;
	width: 61%;
	background-color: #bfbfbf;
	padding: 30px;
	border-radius: 15px;
}

#random-number {
	padding: 20px;
}

#your-score {
	padding: 20px;
}

h2 {
	font-size: 35px;
	text-align: center;
}

aside {
	background-color: #ffcc00;
	float: right;
	margin: 10px;
	width: 21%;
	padding: 30px;
	border-radius: 15px;
}

h3 {
	text-align: center;
	font-size: 30px;
}

#crystal-box {
	background-color: black;
	clear: both;
}

button {
	margin: 0;
	padding: 0;
	border: none;
	background-color: black;
}

.crystals:hover {
	opacity: 0.85;
	cursor: pointer;
}

.crystal-img {
	width: 200px;
	height: 200px;
	display: inline-block;
	padding: 20px;
	border-radius: 35px;
}

/*Make a sticky footer.*/
footer {
	background-color: #ffcc00;
	text-align: center;
	padding: 15px;
	clear: both;
}

